# tox-antitargets-mcp-server

./: .env.example  .gitignore  COSCIENTIST_INTEGRATION.md  Dockerfile  Dockerfile.coscientist  LICENSE  README.md  REPRODUCTION_QUESTIONS.md  build_dataset.py  docker-compose.yml  pyproject.toml  rag_registration.json  reproduce_paper.py
docs/: ARCHITECTURE.md
server/: __init__.py  claims.py  config.py  dataset.py  panel.py  plotting.py  science.py  tox_server.py
server/data/: .gitignore  antitargets_LD50_affinity.csv
tests/: test_reproduction.py
