[project]
name = "tox-antitargets-mcp-server"
version = "0.1.0"
description = "MCP server reproducing Nikitin et al. 2025 (antitarget-LD50 computational toxicology)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastmcp>=2.14.5",
    "pydantic-settings>=2.0",
    "rdkit>=2024.3",
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pubchempy>=1.0",
    "boto3>=1.34",
]

[project.scripts]
tox-antitargets-mcp-server = "server.tox_server:main"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.hatch.build.targets.wheel.force-include]
"server/data/antitargets_LD50_affinity.csv" = "server/data/antitargets_LD50_affinity.csv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = ["slow: long-running reproduction tests (e.g. Butina clustering)"]
